welcome.lessons.welcome.bat.bool1.Close10.scala.error
close10:3: error: constructor cannot be instantiated to expected type;
 found   : (T1, T2, T3)
 required: (Int, Int)
    case (a,b,c) if a == b => 0
         ^close10:4: error: constructor cannot be instantiated to expected type;
 found   : (T1, T2, T3)
 required: (Int, Int)
    case (a,b,c) if Math.abs(10-b)<Math.abs(10-a) => a
         ^close10:5: error: constructor cannot be instantiated to expected type;
 found   : (T1, T2, T3)
 required: (Int, Int)
    case (a,b,c) if Math.abs(10-b)>Math.abs(10-a) => b
         ^