welcome.lessons.welcome.bat.bool1.Close10.scala.code
def close10(a:Int, b:Int): Int = {
  (a,b) match {
    case (a,b,c) if a == b => 0
    case (a,b,c) if Math.abs(10-b)<Math.abs(10-a) => a
    case (a,b,c) if Math.abs(10-b)>Math.abs(10-a) => b
  }
}